# making-embedded-systems-homework

./: .gitmodules  README.md
final/src/: CMakeLists.txt  consoleIo.c  main.c
final/src/console/: CMakeLists.txt  README.md  consoleCommands.c  consoleCommands.h  consoleIo.c
final/src/drawing/: CMakeLists.txt  draw.h
final/src/drawing/src/: draw.c
final/src/drawing/src/include/: draw.h
final/src/st7789/: CMakeLists.txt  README.md
final/src/st7789/st7789-library-for-pico/: CMakeLists.txt
week1/: readme.md
week2/: readme.md  sparkfunPhotonRedboard.md
week3/blinky/: readme.md
week3/blinky/src/: CMakeLists.txt  blinky.c
week4/: readme.md
week5/: readme.md
week5/src/: CMakeLists.txt  console.c  consoleIo.c  main.c
week6/: README.md
week8/: readme.md
week8/src/: CMakeLists.txt  main.c  swapped.ld
